force-app/main/default/objects/Employer_Sentiment__c/Employer_Sentiment__c.object-meta.xml
<CustomObject>
    <description>Stores sentiment data from swipes</description>
    <label>Employer Sentiment</label>
    <nameField>
        <displayFormat>SENT-{00000}</displayFormat>
        <label>Sentiment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employer Sentiments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>