force-app/main/default/objects/Employer_Sentiment__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employer Sentiments</relationshipLabel>
    <relationshipName>Employer_Sentiments</relationshipName>
    <type>Lookup</type>
</CustomField>