force-app/main/default/objects/Employer_Sentiment__c/fields/Employers__c.field-meta.xml
<CustomField>
    <fullName>Employers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employers</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employer Sentiments</relationshipLabel>
    <relationshipName>Employer_Sentiments</relationshipName>
    <type>Lookup</type>
</CustomField>