force-app/main/default/objects/Employer_Sentiment__c/fields/Free_Text_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Free_Text_Feedback__c</fullName>
    <label>Free Text Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>