force-app/main/default/objects/Employer_Sentiment__c/fields/Negative_Signals__c.field-meta.xml
<CustomField>
    <fullName>Negative_Signals__c</fullName>
    <label>Negative Signals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not my industry</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Company size</fullName>
            </value>
            <value>
                <fullName>Culture mismatch</fullName>
            </value>
            <value>
                <fullName>Salary concerns</fullName>
            </value>
            <value>
                <fullName>No growth</fullName>
            </value>
            <value>
                <fullName>Bad reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>