force-app/main/default/objects/Employer_Sentiment__c/fields/Positive_Signals__c.field-meta.xml
<CustomField>
    <fullName>Positive_Signals__c</fullName>
    <label>Positive Signals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company culture</fullName>
            </value>
            <value>
                <fullName>Tech stack</fullName>
            </value>
            <value>
                <fullName>Growth opportunity</fullName>
            </value>
            <value>
                <fullName>Work environment</fullName>
            </value>
            <value>
                <fullName>Leadership team</fullName>
            </value>
            <value>
                <fullName>Mission/values alignment</fullName>
            </value>
            <value>
                <fullName>Salary/benefits</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Remote work</fullName>
            </value>
            <value>
                <fullName>Work-life balance</fullName>
            </value>
            <value>
                <fullName>Compensation/benefits</fullName>
            </value>
            <value>
                <fullName>Remote flexibility</fullName>
            </value>
            <value>
                <fullName>Industry reputation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>