force-app/main/default/objects/Employer_Sentiment__c/fields/Sentiment_Type__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Type__c</fullName>
    <label>Sentiment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positve</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>