force-app/main/default/objects/Employer_Sentiment__c/fields/Swipe_Event__c.field-meta.xml
<CustomField>
    <fullName>Swipe_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swipe Event</label>
    <referenceTo>Swipe_Event__c</referenceTo>
    <relationshipLabel>Employer Sentiments</relationshipLabel>
    <relationshipName>Employer_Sentiments</relationshipName>
    <type>Lookup</type>
</CustomField>