force-app/main/default/objects/Employer_Sentiment__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When feedback given</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>